2008-09-22  Stefan Kost  <ensonic@users.sf.net>

	* tests/gobject/src/gobject.h:
	  Document some odd behaviour.

2008-09-22  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  More todos.

	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.c:
	* tests/bugs/src/tester.h:
	  Add testcase for bug 552602.

	* tests/gtk-doc.make:
	* tests/gtk-doc.notmpl.make:
	  Also use new RUN envvar here.

2008-09-10  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	  Generate unique ids for properties, style and child properties.
  
	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	* gtkdoc-scan.in:
	* gtkdoc-scangobj.in:
	  If we use libtool, run scanner under libtool to use uninstalled
	  libraries.

2008-09-04  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkhtml.in:
	  Fix comparision.

	* TODO:
	  ideas.

	* configure.in:
	* gtk-doc-fo.xsl:
	* gtk-doc.xsl:
	* gtkdoc-common.pl.in:
	* gtkdoc-mkdb.in:
	* help/manual/C/gtk-doc-manual.xml:
	* tests/bugs/docs/Makefile.am:
	* tests/bugs/docs/tester-docs.xml:
	* tests/gobject/docs-tmpl/Makefile.am:
	* tests/gobject/docs-tmpl/tester-docs.xml:
	* tests/gobject/docs/Makefile.am:
	* tests/gobject/docs/tester-docs.xml:
	* tests/gobject/src/gobject.h:
	  Switch to docbook 4.3 dtd. Fixes #487727.
	  Add --name-space option to gtkdoc-mkdb for nicer indexes. Start with a
	  fo wrapper for pdf output.

2008-09-04  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Don't install index.sgml twice. Also remove the " || :;" construct
	  that ssems to be there only to eat the return code. 

2008-07-23  Stefan Kost  <ensonic@users.sf.net>

	* gtkdoc-mkdb.in:
	* gtkdoc-scan.in:
	* tests/bugs/docs/tester-sections.txt:
	* tests/bugs/src/tester.h:
	  Accept "char const *" as well. Fixes #544172.

2008-07-21  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc.make:
	* gtk-doc.notmpl.make:
	  Only specify options if gtkdoc-mkhtml can take them. Fixes #543855.

	* gtkdoc-mkhtml.in: