@@ -1,3 +1,8 @@
+2008-09-24  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtkdoc-mkdb.in:
+	  Use full symbol, if it does not belong to the namespace.
+
 2008-09-22  Stefan Kost  <ensonic@users.sf.net>
 
 	* tests/gobject/src/gobject.h:
